tests/paczka1/fuzzy1/57804884.err
Error in line 1: rS9 S226 57,8
Error in line 6: hcR S226 20,2
Error in line 11: rS9 S226 59,4
Error in line 14: sAMd6RSHAPI S226 9,6
Error in line 12: rS9 S853 59,5
Error in line 16: sAMd6RSHAPI S853 44,0
Error in line 33: hs9uoigzFU8 S853 36,9
